# BlogRestAPI

./: .env  Cargo.toml
migration/: Cargo.toml
migration/src/: lib.rs  m20250715_121626_create_posts_table.rs  m20250724_115046_create_user_table.rs
src/: main.rs
src/db/: connection.rs
src/entities/: mod.rs  post.rs  prelude.rs  user.rs
src/error/: error.rs
src/jwt/: jwt.rs  mod.rs  model.rs
src/middleware/: middleware.rs  mod.rs
src/models/: db_models.rs  mod.rs
src/routes/: mod.rs  posts.rs  users.rs
