[package]
name = "BlogRestapi"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
dotenv = "0.15.0"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = "1.46.1"
uuid = "1.17.0"
futures = "0.3.28"
sea-orm = { version = "^0.12.0", features = [ "sqlx-postgres", "runtime-async-std-native-tls", "macros" ] }
sea-orm-migration = "^0.12.0"
